<resources>
    <string name="app_name">WeHelp</string>
    <string name="app_name_zh">微商助手</string>

    <string name="app_slogen">欢饮使用微商好助手！</string>
    <string name="wehelp_jump_splash">跳过</string>

    <string name="tab_tool">工具箱</string>
    <string name="tab_report">报表</string>
    <string name="tab_order">订单</string>
    <string name="tab_mine">我的</string>

    <!--mine string-->
    <string name="login_on">登录</string>
    <string name="register">注册</string>
    <string name="check_in">签到</string>

    <string name="accoiunt_setting">账号设置</string>
    <string name="user_feedback">意见反馈</string>
    <string name="system_settings">系统设置</string>
    <string name="user_info_setting">编辑资料</string>
    <string name="account_binds">账号绑定</string>
    <string name="clean_cache">清空缓存</string>
    <string name="about_us">关于我们</string>
    <string name="version_check">版本检查</string>
    <string name="login_out">退出登陆</string>
    <string name="others_item">其他</string>

    <string name="please_login_at_first">应用未登录,请登录后尝试！</string>




    <string name="help_center">帮助说明</string>
    <string name="my_integration">我的积分</string>

    <string name="user_name">用户名</string>
    <string name="user_nick_name">昵称</string>
    <string name="my_address">收获地址管理</string>
    <string name="sex">性别</string>
    <string name="user_icon">头像</string>
    <string name="default_user_name">我是小蜜蜂</string>

    <!-- login & register -->
    <string name="prompt_user_name">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_confirm_password">再次输入密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="error_invalid_user_name">用户名至少8位</string>
    <string name="error_invalid_old_password">原密码太短</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_password_not_same">两次输入密码不相同</string>
    <string name="error_field_required">用户名不能为空</string>
    <string name="error_user_already_exists">用户名已存在</string>
    <string name="error_user_not_exists">该用户不存在</string>
    <string name="error_network">网络错误</string>
    <string name="login_success">登陆成功</string>
    <string name="action_register">创建新账号</string>
    <string name="action_register_short">注册</string>
    <string name="login_no_account_yet">还没有账号？创建一个</string>
    <string name="login_already_a_member">已经注册？登陆 </string>

    <!--system setting-->
    <string name="system_setting_edit_userinfo">个人资料设置</string>
    <string name="system_setting_bind_account">账号绑定</string>
    <string name="system_setting_clear_cache">清空缓存</string>
    <string name="system_setting_about_us">关于我们</string>
    <string name="system_setting_check_vesion">版本检查</string>

    <string name="system_setting_logout">退出登录</string>
    <string name="about_content">社区助手 是基于DroiBaas开发的社区社交的应用</string>

    <string name="clear_cache_toast">缓冲已经清理完毕！</string>


    <!--user info edit-->
    <string name="user_header_icon">头像</string>
    <string name="user_sex">性别</string>
    <string name="user_nickname">昵称</string>
    <string name="user_address">地址</string>
    <string name="user_phoneNumber">地址</string>
    <string name="female">女</string>
    <string name="male">男</string>

    <string name="cancel">取消</string>
    <string name="ok">确认</string>

    <string name="hint_nickname">请输入昵称</string>
    <string name="hint_address">请输入地址</string>


    <!--product type-->
    <string name="type_one_muying">母婴</string>
    <string name="type_one_meizhuang">美妆</string>
    <string name="type_one_baojian">保健</string>
    <string name="type_one_jiaju">家具</string>
    <string name="type_one_fushi">服饰</string>
    <string name="type_one_qita">其他</string>

    <string name="type_muying_1">母婴奶粉</string>
    <string name="type_muying_2">母婴纸尿布</string>
    <string name="type_muying_3">母婴辅食</string>
    <string name="type_muying_4">母婴童装</string>
    <string name="type_muying_5">母婴孕妈</string>
    <string name="type_muying_6">母婴洗护</string>


    <string name="type_meizhuang_1">美妆护肤</string>
    <string name="type_meizhuang_2">美妆彩妆</string>
    <string name="type_meizhuang_3">美妆面膜</string>
    <string name="type_meizhuang_4">美妆香水</string>

    <string name="type_baojian_1">保健女生</string>
    <string name="type_baojian_2">保健男生</string>
    <string name="type_baojian_3">保健长辈</string>
    <string name="type_baojian_4">保健零食</string>
    <string name="type_baojian_5">保健儿童</string>

    <string name="type_jiaju_1">家居个人</string>
    <string name="type_jiaju_2">家居家电</string>
    <string name="type_jiaju_3">家居清洁</string>
    <string name="type_jiaju_4">家居厨房</string>

    <string name="type_fushi_1">服饰儿童</string>
    <string name="type_fushi_2">服饰鞋靴</string>
    <string name="type_fushi_3">服饰女包</string>
    <string name="type_fushi_4">服饰配饰</string>
    <string name="type_fushi_5">服饰男包</string>
    <string name="type_fushi_6">母婴手表</string>

    <string name="type_qita_1">其他</string>

</resources>
