<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.btsy.wehelp.view.CircleImageView
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/usr_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/default_icon"
        android:layout_margin="@dimen/mine_list_margin" />

    <LinearLayout
        android:layout_toRightOf="@id/usr_icon"
        android:layout_alignTop="@id/usr_icon"
        android:id="@+id/login_status_view"
        android:visibility="gone"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:orientation="vertical">

        <!---->
        <TextView
            android:textSize="@dimen/mine_username_text_size"
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:text="@string/system_setting_edit_userinfo"
            android:layout_margin="5dp"
            android:id="@+id/edit_user_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <!--mine list view style-->
    <RelativeLayout
        android:layout_toRightOf="@id/usr_icon"
        android:layout_alignTop="@id/usr_icon"
        android:id="@+id/register_or_login"
        android:layout_width="150dp"
        android:gravity="center_vertical"
        android:layout_height="100dp">

        <TextView
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:text="@string/login_on"
            android:gravity="center"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>


    <Button
        android:id="@+id/checkin_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/check_in"
        android:background="@android:color/transparent"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/mine_list_margin"
        android:layout_alignBaseline="@id/register_or_login"
        android:visibility="gone"
        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        >

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--mine star view-->
            <View
                android:id="@+id/divider_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@android:color/darker_gray"
                />

            <LinearLayout
                android:layout_below="@id/divider_1"
                android:id="@+id/account_container"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                >
                <ImageView
                    android:id="@+id/account_icon"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:paddingLeft="10dp"
                    />

                <TextView
                    android:id="@+id/account_setting_text"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:text="@string/accoiunt_setting"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:textSize="25dp"
                    />
            </LinearLayout>


            <!--mine publish view -->
            <View
                android:id="@+id/divider_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_margin="5dp"
                android:layout_below="@id/account_container"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/feedback_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider_2"
                android:onClick="onClick"
                >
                <ImageView
                    android:id="@+id/feedback_icon"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:paddingLeft="10dp"
                    />

                <TextView
                    android:id="@+id/feed_back_text"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/user_feedback"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:textSize="25dp"
                    />

            </LinearLayout>

            <!--mine sell view -->
            <View
                android:id="@+id/divider_5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_margin="5dp"
                android:layout_below="@id/feedback_container"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/update_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider_5"
                android:onClick="onClick"
                >
                <ImageView
                    android:id="@+id/update_icon"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:paddingLeft="10dp"
                    />

                <TextView
                    android:id="@+id/update_text"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/version_check"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:textSize="25dp"
                    />

            </LinearLayout>

            <!--mine order view -->
            <View
                android:id="@+id/divider_3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_margin="@dimen/mine_list_margin"
                android:layout_below="@id/update_container"
                />

            <LinearLayout
                android:layout_below="@id/divider_3"
                android:id="@+id/about_container"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                >
                <ImageView
                    android:layout_below="@id/divider_3"
                    android:id="@+id/about_icon"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:paddingLeft="10dp"
                    />
                <TextView
                    android:id="@+id/about_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/about_us"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:textSize="25dp"
                    />
            </LinearLayout>


            <View
                android:id="@+id/divider_4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_margin="@dimen/mine_list_margin"
                android:layout_below="@id/about_container"
                />

            <LinearLayout
                android:layout_below="@id/divider_4"
                android:orientation="horizontal"
                android:id="@+id/other_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                >
                <ImageView
                    android:id="@+id/other_icon"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:paddingLeft="10dp"
                    />
                <TextView
                    android:id="@+id/other_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/others_item"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:textSize="25dp"
                    />
            </LinearLayout>



            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_margin="@dimen/mine_list_margin"
                android:layout_below="@id/other_container"
                />

            <!--<View-->
                <!--android:id="@+id/divider_2_3"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="1dp"-->
                <!--android:background="@android:color/darker_gray"-->
                <!--android:layout_margin="@dimen/mine_list_margin"-->
                <!--android:layout_below="@id/setting_container"-->
                <!--/>-->

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
